Fix verification in a second browser not showing the password field.

--- a/resources/static/pages/css/style.css
+++ b/resources/static/pages/css/style.css
@@ -466,6 +466,10 @@ button.delete:active {
   display: none;
 }
 
+.enter_password .password_entry {
+  display: block;
+}
+
 label.vpassword_entry {
   margin-top: 15px;
 }
